# GalleryTEC

./: CMakeLists.txt  ClientWindow.cpp  ClientWindow.h  CompressionAlgorithm.cpp  CompressionAlgorithm.h  GalleryTEC.pro  MainWindow.cpp  MainWindow.h  README.md  StorageManager.cpp  StorageManager.h  clientwindow.ui  config.conf  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
html/: ClientWindow_8h_source.html  CompressionAlgorithm_8h_source.html  StorageManager_8h_source.html  annotated.html  classClientWindow-members.html  classClientWindow.html  classClientWindow__inherit__graph.dot  classCompressionAlgorithm-members.html  classCompressionAlgorithm.html  classMainWindow-members.html  classMainWindow.html  classStorageManager-members.html  classStorageManager.html  classes.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_3.dot  inherits.html  mainwindow_8h_source.html  structNode-members.html  structNode.html  structNode__coll__graph.dot
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  classes_0.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  (+2 more)
latex/: annotated.tex  classClientWindow.tex  classClientWindow.tex.tmp  classClientWindow__coll__graph.dot  classCompressionAlgorithm.tex  classMainWindow.tex  classStorageManager.tex  hierarchy.tex  refman.tex  structNode.tex  structNode__coll__graph.dot
